# JOEL-XMD

./: MANIFEST.in  package-lock.json  package.json  pyproject.toml  setup.py
.github/: copilot-instructions.md
joelXtec/joelXbot/: ml.js
lib/: ml_model.cjs
mydata/: ml_corpus.json
tests/: test_import.py
